<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.QuestionnaireFragment">

    <TextView
        android:id="@+id/questionTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_text"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/questionTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <RadioButton
            android:id="@+id/radio_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_1" />

        <RadioButton
            android:id="@+id/radio_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_2" />

        <RadioButton
            android:id="@+id/radio_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_3" />

        <RadioButton
            android:id="@+id/radio_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_4"
            />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
